lab3/examples/96-unterminated.oc.err
96-unterminated.oc:6:15: warning: missing terminating " character [enabled by default]
    string s = "abc;
               ^
96-unterminated.oc:7:13: warning: missing terminating ' character [enabled by default]
    char c = 'a;
             ^
96-unterminated.oc:8:8: warning: missing terminating " character [enabled by default]
    s = "abcd\";
        ^
96-unterminated.oc:9:8: warning: missing terminating " character [enabled by default]
    s = "abc|\
        ^
¨p:5.15: invalid token ("\*/")
¨p:5.20: syntax error, unexpected ';'
¨p:6.15: invalid token ("abc;)
¨p:7.9: syntax error, unexpected TOK_IDENT
¨p:7.13: invalid token ('a;)
¨p:8.8: invalid token ("abcd\";)
¨p:9.8: invalid token ("abc|   ;)
¨p:11.8: invalid token (23foobar)
